# QRSHIELD

./: README.md  pyproject.toml
app/: payload_detector.py  rule_engine.py  server.py
app/static/: app.js  style.css
app/templates/: index.html
